<resources>
    <string name="app_name">BuyerApp</string>
    <string name="welcome">Welcome Back !</string>
    <string name="number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dontHave">Don\'t have an account</string>
    <string name="signUp">Sign Up</string>
    <string name="Phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="nameoffarmer">Name of Farmer</string>
    <string name="email">Email (optional)</string>
    <string name="district">District</string>
    <string name="chiefdom">Chiefdom</string>
    <string name="section">Section</string>
    <string name="village">Town/Village</string>
    <string name="Confirnmpassword">Confirm Password</string>
    <string name="alreadyhave">Already have an Account ?</string>
    <string name="login">Login</string>
    <string name="institution_farmers">Institution Farmers</string>
    <string name="name_of_farmer">Name of Farmer</string>
    <string name="name_group">Name of Group</string>
    <string name="leader">Name of Leader</string>
    <string name="name_of_institution">Name of Institude</string>
    <string name="sector">Sector</string>
    <string name="department">Department</string>
    <string name="location">Location</string>
    <string name="pls_enter_phone_number">Please enter phone number</string>
    <string name="phone_no_minimum_length">Phone number should be exist between 8-13 digits</string>
    <string name="phone_no_maximum_length">Phone number should be exist between 8-13 digits</string>
    <string name="phone_no_valid">Please enter valid mobile number</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="smartForm">Smart Forms</string>
    <string name="welcom">Welcome</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_service">My Services</string>
    <string name="My_transaction">My Transactions</string>
    <string name="order_hisotry">Order History</string>
    <string name="notification">Notifications</string>
    <string name="setting">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="get_quotes">Get A Quote</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_condition"><![CDATA[Term&Conditons]]></string>
    <string name="logout">Logout</string>
    <string name="individual_farmers">Individual Farmers</string>
    <string name="group_farmers">Group Farmers</string>
    <string name="pls_enter_name_of_farmer">Please enter former name</string>
        <string name="phone_no_minimum_length_should">Please enter valid mobile no</string>
    <string name="pls_enter_district">Please enter district</string>
    <string name="pls_enter_chiefdom">Please enter chiefdom</string>
    <string name="pls_enter_section">Please enter section</string>
    <string name="pls_enter_town">Please enter town</string>
    <string name="pls_enter_confirm_password">Please enter password</string>
    <string name="pls_enter_same_password">Please enter confirm password</string>
    <string name="pls_enter_name_of_group">Please enter name of group</string>
    <string name="pls_enter_name_of_leader">Please enter leader name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="our_services">Our Services</string>
    <string name="our_product">Our Products</string>
    <string name="exploreProject">Explore Projects</string>
    <string name="all_clear">Clear All</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="vehicleName">Vehicle Name</string>
    <string name="vehiclePrice">Vehicle Price:</string>
    <string name="description">Description:</string>
    <string name="these_permissions_are_mandatory">These_permissions_are_mandatory</string>
    <string name="book">Book</string>
    <string name="test">Test</string>
    <string name="send_request">Send Request</string>
    <string name="land_size">Land size</string>
    <string name="land_type">Land type</string>
    <string name="number_of_day">Number of day</string>
    <string name="price">price</string>
    <string name="proceed_to_check">Proceed To Check</string>
    <string name="start_date">Start date</string>
    <string name="for_number_of_days">For Number Of Days :</string>
    <string name="days">Days</string>
    <string name="start_dates">Start Date :</string>
    <string name="service_name">Service Name :</string>
    <string name="address">Address :</string>
    <string name="buyNow">BUY NOW</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="make_payment">Make Payment</string>
    <string name="service_details">Services Details</string>
    <string name="serviceName">Service Name</string>
    <string name="product_list">Product List</string>
    <string name="careal">Careal</string>
    <string name="remaining_qty">Remaining Qty :</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_details">Product Details</string>
    <string name="product_price">Product Price :</string>
    <string name="quantiy">Quantity :</string>
    <string name="remaining_quantity">Remaining Quantity :</string>
    <string name="these_permissions_are_mandatory_for_this_application_please_allow_access">These Permissions are Mandatory for this Application. Please Allow Access.These Permissions are Mandatory for this Application. Please Allow Access.These Permissions are Mandatory for this Application. Please Allow Access.These Permissions are Mandatory for this Application. Please Allow Access.These Permissions are Mandatory for this Application. Please Allow Access.These Permissions are Mandatory for this Application. Please Allow Access.</string>
    <string name="cart_list">Cart List</string>
    <string name="Subtotal">SubTotal</string>
    <string name="total_amounts">Total Amout</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="remove_item">Remove item</string>
    <string name="ServicePrice">Services Price:</string>
    <string name="addres">Address</string>
    <string name="full_name">Full Name</string>
    <string name="pinCode">Pin Code</string>
    <string name="city">City</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="total_amount">Total Amount :</string>
    <string name="Phone_num">Phone Number :</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="clear_all_cart_item">Clear All CartList Item</string>
    <string name="Are_you_sure_to_clear">Are you sure to clear all this item from the cart</string>
    <string name="organic_solution">Organic Solution</string>
    <string name="project_details">Project Details</string>
    <string name="project_name">Project Name</string>
    <string name="status">Status</string>
    <string name="project_price">Project Price :</string>
    <string name="descriptions">Description :</string>
    <string name="these_permissions_are_mandatory_for_this_application_please_allow_acces">Please Allow Access.These Permissions are Mandatory for this Application. Please Allow Access.</string>
    <string name="startDate">Start Dates :</string>
    <string name="select_date">Select Date</string>
    <string name="complete_date">Complete Date :</string>
    <string name="locations">Location :</string>
    <string name="verification_code">Verificaion Code</string>
    <string name="Veriydesc">We sent you a code to verify your newly account</string>
    <string name="verify">Verify</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="payment_id">Payment Id :</string>
    <string name="name">Name :</string>
    <string name="transaction_dete">Transaction Date :</string>
    <string name="amount_transfer">Amount Transfer</string>
    <string name="my_transaction">My Transactions</string>
    <string name="order_history_list">Order History List</string>
    <string name="complete">Completed</string>
    <string name="cancel_item">Cancel Order</string>
    <string name="reason_to_concel_order">Reason To Cancel The Order</string>
    <string name="submit">Submit</string>
    <string name="product_detail">Product Detail</string>
    <string name="order_date">Order Date :</string>
    <string name="order_number">Order No :</string>
    <string name="mobile_number">Mobile  Number :</string>
    <string name="notifications">Notifications</string>
    <string name="these_permissions_are_mandatory_for">These Permissions are Mandatory for this Application. Please Allow Access.</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="Name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="Email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="Sumt">SUBMIT</string>
    <string name="email_us">EMAIL US</string>
    <string name="call_us">CALL US</string>
    <string name="select_yourService">Select You Service</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="forgot_change_password">Forgot Password</string>
    <string name="confrm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="please_connect_internet_connection">Please Connect Internet Connection ?</string>
    <string name="retry">Retry</string>
    <string name="ok">ok</string>
    <string name="confirm_logout">"Confirm Logout "</string>
    <string name="are_you_sure_to_logout">Are you sure to Logout?</string>
    <string name="pls_enter_landsize">Please enter land size</string>
    <string name="pls_enter_landtype">Please enter land type</string>
    <string name="pls_enter_number_of_day">Please enter number of days</string>
    <string name="pls_enter_location">Please enter location</string>
    <string name="pls_select_start_date">Please select start date</string>
    <string name="Phone_no_minimum_length">Please enter phone number</string>
    <string name="name_of_leader">Name of leader</string>
    <string name="pls_enter_phoneNumber">Please enter phone number</string>
    <string name="pls_enter_new_password">Please enter new password</string>
    <string name="please_enter_same_password">Please enter same password</string>
    <string name="password_change_sucessfully">Password change sucessfully</string>
    <string name="pyment_mode">Payment Via Orange Money</string>
    <string name="coris_money_account_id">Orange Money Id</string>
    <string name="amount">Amout</string>
    <string name="getotp">GET OTP</string>
    <string name="how_to_make_payment">How to make Payment? See Full Instruction!</string>
    <string name="date">Date</string>
    <string name="my_service_details">My Services Details</string>
    <string name="booking_date">Booking Date :</string>
    <string name="booking_number">Booking No :</string>
    <string name="details">Details</string>
    <string name="startdate">Start Date :</string>
    <string name="pls_enter_old_password">Please enter old password</string>
    <string name="pls_enter_minimum_6_char">Please enter minimum 6 char</string>
    <string name="newpassword_and_confirm_password_should_be_same">New password and confirm password should be same</string>
</resources>