<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ExploreProjectActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/appColorGreen">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/size_10dp"
            android:src="@drawable/back_arrow"
            android:tint="@color/white"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/project_details"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            app:cardCornerRadius="3dp">

            <ImageView
                android:id="@+id/exploreImage"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/farm" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/projectNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:gravity="center"
            android:text="@string/project_name"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_20sp" />


        <TextView
            android:id="@+id/exploreStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:gravity="end"
            android:paddingEnd="@dimen/size_10dp"
            android:paddingRight="@dimen/size_10dp"
            android:text="@string/status"
            android:textAlignment="viewEnd"
            android:textColor="@color/red" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_price"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp" />

            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="$110000"
                android:textSize="@dimen/textSize_16sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_marginBottom="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptions"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp" />


            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/these_permissions_are_mandatory_for_this_application_please_allow_acces"
                android:textSize="@dimen/textSize_15sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/gray_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:layout_marginBottom="@dimen/size_10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startDate"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp" />

            <TextView
                android:id="@+id/startDateTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textSize="@dimen/textSize_16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:layout_marginBottom="@dimen/size_10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/complete_date"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp" />

            <TextView
                android:id="@+id/completeDateTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textSize="@dimen/textSize_16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/locations"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp" />

            <TextView
                android:id="@+id/locationtxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:textSize="@dimen/textSize_16sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/gray_light" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>