<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.VehicleDetailsActivity">


    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/appColorGreen">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back_arrow"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/vehicle_details"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/vehicleBtnBook">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/vehicleDeatailImg"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/vehicleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_marginRight="@dimen/size_15dp"
            android:layout_marginLeft="@dimen/size_15dp"
            android:gravity="center"
            android:text="@string/vehicleName"
            android:textColor="@color/black"
            android:textSize="@dimen/size_18dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehiclePrice"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp" />

            <TextView
                android:id="@+id/vehiclePriceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp" />


            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/gray_light" />

    </LinearLayout>
</ScrollView>

    <TextView
        android:id="@+id/vehicleBtnBook"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/book"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20dp" />

</RelativeLayout>